--- a/details.html
+++ b/details.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Product Details - OTT WALLAH</title>
+  <title>OTT WALLAH — Product Details</title>
 
   <style>
     body {
@@ -60,9 +61,9 @@
 
     .btn {
       display: inline-block;
-      margin-top: 15px;
+      margin-top: 20px;
       background: #ff0000;
-      padding: 12px 18px;
+      padding: 14px 22px;
       color: #fff;
       font-weight: 700;
       border-radius: 8px;
@@ -74,54 +75,54 @@
 
 <body>
 
-<div class="container">
-  <div class="box">
+  <div class="container">
+    <div class="box">
 
-    <div class="top">
-      <img id="product-img">
-      
-      <div>
-        <h1 id="product-name"></h1>
-        <div class="price" id="product-price"></div>
+      <div class="top">
+        <img id="product-img">
 
-        <h3>Description</h3>
-        <p id="product-desc"></p>
+        <div>
+          <h1 id="product-name"></h1>
+          <div class="price" id="product-price"></div>
+
+          <h3>Description</h3>
+          <p id="product-desc"></p>
+        </div>
       </div>
+
+      <h3>Included Features</h3>
+      <ul id="product-features"></ul>
+
+      <a id="buyBtn" class="btn">Buy Now</a>
+
     </div>
-
-    <h3>Included Features</h3>
-    <ul id="product-features"></ul>
-
-    <a id="buyBtn" class="btn">Buy Now</a>
-
   </div>
-</div>
 
-<script src="data.js"></script>
-<script>
-  const urlParams = new URLSearchParams(window.location.search);
-  const id = urlParams.get("id");
+  <script src="data.js"></script>
 
-  const product = PRODUCTS[id];
+  <script>
+    const urlParams = new URLSearchParams(window.location.search);
+    const id = urlParams.get("id");
+    const product = PRODUCTS[id];
 
-  if (!product) {
+    if (!product) {
       document.body.innerHTML = "<h1 style='color:red;text-align:center'>Invalid Product</h1>";
-  }
+    }
 
-  document.getElementById("product-img").src = product.img;
-  document.getElementById("product-name").innerText = product.name;
-  document.getElementById("product-price").innerText = product.price;
-  document.getElementById("product-desc").innerText = product.description;
+    document.getElementById("product-img").src = product.img;
+    document.getElementById("product-name").innerText = product.name;
+    document.getElementById("product-price").innerText = product.price;
+    document.getElementById("product-desc").innerText = product.description;
 
-  let list = "";
-  product.features.forEach(f => {
-      list += `<li>${f}</li>`;
-  });
-  document.getElementById("product-features").innerHTML = list;
+    let listHTML = "";
+    product.features.forEach(f => listHTML += `<li>${f}</li>`);
+    document.getElementById("product-features").innerHTML = listHTML;
 
-  document.getElementById("buyBtn").href =
-      `https://wa.me/919837777006?text=Hi%20I%20want%20to%20buy%20${product.name}`;
-</script>
+    // BUY BUTTON → WhatsApp Message
+    document.getElementById("buyBtn").href =
+      `https://wa.me/919837777006?text=Hi%20I%20want%20to%20buy%20${encodeURIComponent(product.name)}`;
+  </script>
 
 </body>
+
 </html>
