--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -14,11 +14,11 @@
 
     /* NAVBAR */
     .navbar {
-      padding:20px 40px; background:#0d0d0d; border-bottom:1px solid rgba(255,0,0,.3);
+      padding:20px 40px; background:#080808; border-bottom:1px solid rgba(255,0,0,.35);
       display:flex; justify-content:space-between; align-items:center;
       position:sticky; top:0; z-index:999;
     }
-    .logo { font-size:32px; font-weight:900; color:#ff0000; display:flex; gap:10px; align-items:center; }
+    .logo { font-size:33px; font-weight:900; color:#ff0000; display:flex; gap:10px; align-items:center; }
     .logo span { color:#fff; }
     .nav-links a {
       margin-left:25px; color:#ccc; text-decoration:none; font-size:17px; font-weight:500;
@@ -26,59 +26,97 @@
     .nav-links a:hover { color:#ff0000; }
     .contact-btn {
       background:#ff0000; padding:10px 18px; border-radius:6px;
-      color:#fff; text-decoration:none; font-weight:700;
+      color:#fff; text-decoration:none; font-weight:700; border:1px solid #800000;
     }
 
-    /* HERO BANNER */
+    /* HERO */
     .hero {
       background:url("/uploads/banner1.jpeg") center/cover no-repeat;
       padding:150px 20px; text-align:center;
+      box-shadow:inset 0 0 200px rgba(0,0,0,0.6);
     }
     .hero h1 {
-      font-size:50px; font-weight:900; max-width:900px; margin:auto;
-      text-shadow:0 0 20px #000;
+      font-size:55px; font-weight:900; max-width:900px; margin:auto;
+      text-shadow:0 0 30px #000;
     }
     .hero span { color:#ff0000; }
-    .hero p { margin-top:15px; font-size:20px; color:#ccc; }
-    .hero-btns { margin-top:30px; display:flex; justify-content:center; gap:15px; }
-    .btn { padding:14px 26px; border-radius:6px; text-decoration:none; font-size:17px; font-weight:700; }
+    .hero p { margin-top:15px; font-size:20px; color:#ddd; }
+    .hero-btns { margin-top:35px; display:flex; justify-content:center; gap:18px; }
+    .btn { padding:14px 26px; border-radius:8px; text-decoration:none; font-size:17px; font-weight:700; }
     .btn-red { background:#ff0000; color:#fff; }
     .btn-dark { background:#111; color:#fff; border:1px solid #333; }
 
-    /* BIG CATEGORY BOXES */
+    /* TOP CATEGORIES */
     .big-section { padding:80px 20px; text-align:center; }
-    .section-title { font-size:38px; font-weight:900; color:#ff0000; margin-bottom:40px; }
-    
+    .section-title { font-size:40px; font-weight:900; color:#ff0000; margin-bottom:40px; }
+
     .cat-grid {
       display:grid; grid-template-columns:repeat(auto-fit,minmax(300px,1fr));
-      gap:30px; padding:0 40px;
+      gap:35px; padding:0 40px;
     }
 
     .cat-box {
       background:#111; border-radius:20px; padding:20px; cursor:pointer;
       transition:.3s; border:1px solid #222;
     }
-    .cat-box:hover { transform:translateY(-8px); border-color:#ff0000; }
-    .cat-box img { width:100%; border-radius:16px; }
+    .cat-box:hover { transform:translateY(-8px); border-color:#ff0000; box-shadow:0 0 20px rgba(255,0,0,0.3); }
+    .cat-box img { width:100%; height:200px; object-fit:cover; border-radius:14px; }
     .cat-box h3 { margin-top:15px; font-size:24px; font-weight:700; }
 
+    /* SHOP NOW SECTION (OTTcheap style) */
+    .shopnow-section { padding:80px 20px; text-align:center; }
+    .shop-grid {
+      display:grid; grid-template-columns:repeat(auto-fit,minmax(320px,1fr));
+      gap:35px; padding:20px 40px;
+    }
+
+    .shop-card {
+      background:#111; border-radius:18px; overflow:hidden;
+      border:1px solid #222; transition:0.3s; cursor:pointer;
+    }
+    .shop-card:hover {
+      transform:translateY(-10px);
+      border-color:#ff0000;
+      box-shadow:0 0 30px rgba(255,0,0,0.3);
+    }
+
+    .shop-img { width:100%; height:220px; object-fit:cover; }
+    .shop-info { padding:20px; text-align:left; }
+    .shop-info h3 { font-size:22px; font-weight:700; }
+    .shop-info p { color:#bbb; font-size:15px; margin:10px 0 15px; }
+    .shop-btn {
+      background:#ff0000; color:#fff; padding:10px 18px; border:none;
+      border-radius:8px; font-weight:700; cursor:pointer; transition:.3s;
+    }
+    .shop-btn:hover { background:#cc0000; }
+
+    /* FEATURES SECTION */
+    .features {
+      padding:80px 20px; background:#0d0d0d; text-align:center;
+    }
+    .feat-grid {
+      display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+      gap:30px; padding:20px 40px;
+    }
+    .feat-box {
+      background:#111; padding:25px; border-radius:15px; border:1px solid #222;
+    }
+    .feat-box i { font-size:35px; color:#ff0000; margin-bottom:10px; }
+
     /* REVIEWS */
-    .reviews { padding:70px 20px; background:#0d0d0d; text-align:center; }
+    .reviews { padding:80px 20px; background:#080808; text-align:center; }
     .review-slider { display:flex; overflow-x:auto; gap:20px; padding:20px; }
     .review-card {
-      min-width:280px; background:#111; padding:20px; border-radius:15px;
-      border:1px solid #222;
+      min-width:280px; background:#111; padding:20px;
+      border-radius:15px; border:1px solid #222;
     }
     .review-stars i { color:#ff0000; }
 
-    /* DELIVERY SECTION */
-    .delivery { padding:60px 20px; text-align:center; }
-    .delivery p { font-size:20px; color:#ccc; max-width:600px; margin:auto; }
-
     /* FOOTER */
-    footer { padding:50px 20px; background:#0d0d0d; text-align:center; border-top:1px solid rgba(255,0,0,.3); }
+    footer { padding:50px 20px; margin-top:50px; background:#0d0d0d; text-align:center; border-top:1px solid rgba(255,0,0,.3); }
     footer h3 { color:#ff0000; font-size:24px; }
     footer p { color:#999; margin-top:8px; }
+
   </style>
 </head>
 
@@ -108,12 +146,11 @@
   </div>
 </section>
 
-<!-- BIG CATEGORIES -->
+<!-- CATEGORIES -->
 <section class="big-section">
   <h2 class="section-title">🔥 Top Categories</h2>
 
   <div class="cat-grid">
-
     <div class="cat-box" onclick="location.href='ott.html'">
       <img src="/uploads/bannerOTT.jpeg">
       <h3>OTT Apps • Netflix • Prime • Hotstar</h3>
@@ -126,13 +163,73 @@
 
     <div class="cat-box" onclick="location.href='editing.html'">
       <img src="/uploads/Capcut.jpeg">
-      <h3>Editing Tools • Capcut • AE • Premiere</h3>
+      <h3>Editing Tools • CapCut • AE • Premiere</h3>
+    </div>
+  </div>
+</section>
+
+<!-- SHOP NOW SECTION (OTTcheap style) -->
+<section class="shopnow-section">
+  <h2 class="section-title">🔥 Shop Now</h2>
+
+  <div class="shop-grid">
+
+    <div class="shop-card" onclick="location.href='ott.html'">
+      <img src="/uploads/bannerOTT.jpeg" class="shop-img">
+      <div class="shop-info">
+        <h3>OTT Subscriptions</h3>
+        <p>Netflix, Amazon Prime, Hotstar, Sony LIV & more</p>
+        <button class="shop-btn">Shop Now</button>
+      </div>
+    </div>
+
+    <div class="shop-card" onclick="location.href='courses.html'">
+      <img src="/uploads/Course1.jpeg" class="shop-img">
+      <div class="shop-info">
+        <h3>Premium Courses</h3>
+        <p>Top trending skills at lowest prices</p>
+        <button class="shop-btn">Shop Now</button>
+      </div>
+    </div>
+
+    <div class="shop-card" onclick="location.href='editing.html'">
+      <img src="/uploads/Capcut.jpeg" class="shop-img">
+      <div class="shop-info">
+        <h3>Editing Tools</h3>
+        <p>CapCut Templates, AE Packs, Presets & more</p>
+        <button class="shop-btn">Shop Now</button>
+      </div>
     </div>
 
   </div>
 </section>
 
-<!-- CUSTOMER REVIEWS -->
+<!-- FEATURES -->
+<section class="features">
+  <h2 class="section-title">⚡ Why Choose OTT WALLAH?</h2>
+
+  <div class="feat-grid">
+    <div class="feat-box">
+      <i class="ri-flashlight-fill"></i>
+      <h3>Instant Delivery</h3>
+      <p>Plans activated instantly after payment.</p>
+    </div>
+
+    <div class="feat-box">
+      <i class="ri-money-rupee-circle-fill"></i>
+      <h3>Lowest Prices</h3>
+      <p>Up to 90% cheaper than market rates.</p>
+    </div>
+
+    <div class="feat-box">
+      <i class="ri-shield-check-fill"></i>
+      <h3>Trusted by 12,000+ users</h3>
+      <p>Thousands of satisfied customers.</p>
+    </div>
+  </div>
+</section>
+
+<!-- REVIEWS -->
 <section class="reviews">
   <h2 class="section-title">🌟 Customer Reviews</h2>
 
@@ -160,12 +257,6 @@
   </div>
 </section>
 
-<!-- DELIVERY SECTION -->
-<section class="delivery">
-  <h2 class="section-title">🚚 Delivery Across India</h2>
-  <p>We deliver OTT plans, courses and tools instantly in ANY location across India — 24/7 fast delivery guaranteed.</p>
-</section>
-
 <!-- FOOTER -->
 <footer>
   <h3>OTT WALLAH — Support</h3>
@@ -174,123 +265,5 @@
   <p>© 2025 OTT WALLAH — All Rights Reserved</p>
 </footer>
 
-<script src="app.js"></script>
-<!-- PAYMENT MODAL -->
-<div id="payModal" class="pay-modal">
-  <div class="pay-box">
-    
-    <button class="close-pay" onclick="closePayModal()">✖</button>
-
-    <h2>Complete Your Payment</h2>
-    <p class="p-text">
-      Product: 
-      <span id="payProductName" style="color:#ff0000;font-weight:700;"></span>
-    </p>
-
-    <h3>UPI Payment</h3>
-    <div class="upi-box">
-      <p>Scan & Pay:</p>
-
-      <!-- Your QR image from uploads folder -->
-      <img src="/uploads/QR.jpeg" class="qr-img">
-
-      <p>OR Pay to UPI ID:</p>
-      <div class="upi-id">**yourupi@okaxis**</div>
-
-      <button class="copy-btn" onclick="copyUPI()">Copy UPI ID</button>
-    </div>
-
-    <h3>After Payment</h3>
-    <p class="p-small">Click below to send payment screenshot:</p>
-
-    <a id="whatsAppLink" class="wa-btn" target="_blank">
-      Send on WhatsApp
-    </a>
-
-  </div>
-</div>
-
-<style>
-  .pay-modal {
-    position: fixed;
-    top:0; left:0;
-    width:100%; height:100%;
-    background:rgba(0,0,0,0.8);
-    display:none;
-    justify-content:center;
-    align-items:center;
-    z-index: 9999;
-  }
-  .pay-box {
-    background:#111;
-    padding:30px;
-    width:90%; max-width:400px;
-    border-radius:20px;
-    border:1px solid #ff0000;
-    text-align:center;
-  }
-  .close-pay {
-    background:none;
-    border:none;
-    color:white;
-    font-size:20px;
-    float:right;
-    cursor:pointer;
-  }
-  .qr-img {
-    width:180px;
-    margin:10px auto;
-    border-radius:10px;
-  }
-  .upi-id {
-    background:#222;
-    padding:8px;
-    margin:10px auto;
-    border-radius:8px;
-    font-size:16px;
-    font-weight:600;
-  }
-  .copy-btn {
-    background:#ff0000;
-    padding:8px 14px;
-    border:none;
-    color:white;
-    border-radius:6px;
-    cursor:pointer;
-  }
-  .wa-btn {
-    display:block;
-    margin-top:20px;
-    background:#25D366;
-    padding:12px;
-    color:white;
-    font-weight:700;
-    border-radius:8px;
-    text-decoration:none;
-  }
-</style>
-
-<script>
-  function openPayModal(productName) {
-    document.getElementById("payModal").style.display = "flex";
-    document.getElementById("payProductName").innerText = productName;
-
-    document.getElementById("whatsAppLink").href =
-      "https://wa.me/919837777006?text=I%20Have%20Paid%20For%20"
-      + encodeURIComponent(productName)
-      + "%20Please%20Activate%20My%20Plan.";
-  }
-
-  function closePayModal() {
-    document.getElementById("payModal").style.display = "none";
-  }
-
-  function copyUPI() {
-    navigator.clipboard.writeText("yourupi@okaxis");
-    alert("UPI ID Copied!");
-  }
-</script>
-
 </body>
 </html>
-
